<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="horizontal"
              android:descendantFocusability="blocksDescendants"
              android:weightSum="3"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/list_item_height"
        android:background="@color/colorListItem"
        android:paddingLeft="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_3dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="2.4">

        <TextView
            android:id="@+id/text_product_name"
            style="@style/ListViewProduct"
            tools:text="@string/default_product_name"/>

        <RelativeLayout
            android:id="@+id/rlayout_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp">

            <TextView
                android:id="@+id/text_product_price"
                style="@style/ListViewProductDetails"
                tools:text="@string/default_product_price"/>

            <TextView
                android:id="@+id/text_product_discount"
                android:layout_toRightOf="@id/text_product_price"
                style="@style/ListViewProductDetails"
                android:textColor="@color/colorTextHighlight"
                tools:text="@string/default_product_sale_price"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text_product_stock"
        style="@style/ListViewStock"
        tools:text="@string/default_stock" />

    <ImageButton
        android:id="@+id/button_sale"
        android:layout_width="@dimen/list_item_height"
        android:layout_height="@dimen/list_item_height"
        android:background="@color/colorPrimary"
        android:src="@drawable/basket_unfill"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

</LinearLayout>