<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.android.storeinventory.CatalogActivity">

    <ListView
        android:id="@+id/list_products"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_margin"
        android:orientation="vertical"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/activity_margin"/>

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_shelter_image"
            android:contentDescription="@string/default_emptystate_image"
            android:layout_width="@dimen/empty_image_width"
            android:layout_height="@dimen/empty_image_height"
            android:layout_centerHorizontal="true"
            android:src="@drawable/empty_store"/>

        <TextView
            android:id="@+id/text_empty_title"
            android:layout_below="@+id/empty_shelter_image"
            style="@style/EmptyStateTitle"
            android:text="@string/info_empty_store_title"/>

        <TextView
            android:id="@+id/text_empty_subtitle"
            android:layout_below="@+id/text_empty_title"
            style="@style/EmptyStateSubtitle"
            android:text="@string/info_empty_store_subtitle"/>
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorFAB"
        android:src="@drawable/plus_circle"/>

</RelativeLayout>